--- a/_config.yml
+++ b/_config.yml
@@ -417,7 +417,7 @@ font:
   # Global font settings used for all elements inside <body>.
   global:
     external: true
-    family: Lato
+    family: Inter
     size:
 
   # Font settings for site title (.site-title).
