--- a/_config.yml
+++ b/_config.yml
@@ -184,6 +184,7 @@ social:
   Instagram: https://www.instagram.com/yuenshiney/ || fab fa-instagram
   Linkedin: https://www.linkedin.com/in/zhihao-ruan-29b29a13a/ || fab fa-linkedin
   CV: https://zhihaoruan.xyz/curriculum-vitae/ || fa fa-id-card
+  Resume: https://zhihaoruan.xyz/resume/ || fa fa-id-card
   #Skype: skype:yourname?call|chat || fab fa-skype
 
 social_icons:
